--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     loading="lazy" ></iframe></center>
     <h6><center>VLOG</center></h6>
    <center> <iframe name="Our restaurent" frameborder="0" height="400" width="400"></iframe></center>
-    <center><a href="https://www.youtube.com/embed/rI8FOLA-9XM?si=75iiqvqcvyz8M-M6" target="Our restaurent" ><center><h1 style="background-color: rgb(204, 141, 23);">our Restaurent</h1> click here ↑↑↑</center></a></center>
+    <center><a href="./vid.mp4" target="Our restaurent" ><center><h1 style="background-color: rgb(204, 141, 23);">our Restaurent</h1> click here ↑↑↑</center></a></center>
    <hr>
    <h7><center>Famous Recipes</center</h7>
    <center><iframe name="My screen" height="200" width="300"><br></iframe> </center> 
